Fixing homepage and shop page cards going out of container

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,5 +1,5 @@
-.col-md-3.col-sm-6{
-    padding:10px;
+.hom-card{
+    padding-top:10px;
 }
 .jumbotron{
     margin-top: 1rem;
